# ATP-Prediction-Service

./: .gitignore  1_HistoricalData.ipynb  1_train_historical.py  2_FeaturePipeline.ipynb  2_backtest_2025.py  3_TrainingPipeline.ipynb  3_daily_update.py  4_Inference_Pipeline.ipynb  BETTING_STRATEGY_COMPARISON.md  PROJECT_DESCRIPTION.md  README.md  backtest_2025.csv  feature_importance.csv  model_metrics.json  pyproject.toml  requirements.txt  streamlit_app.py  tennis-feature.py  tennis-historical.py  tennis-inference-smart.py  tennis-inference.py  tennis-training.py  tennis_predictions.csv  tennis_predictions_smart.csv  utils.py
.github/workflows/: daily_update.txt  daily_update.yml
tennis_model/: model.json
