[project]
name = "atp-prediction-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hopsworks>=4.6.0",
    "hsml>=3.7.2",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.3.3",
    "plotly>=5.18.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "streamlit>=1.28.0",
    "xgboost>=3.1.2",
]
